# CodingChallenegeProject

./: package-lock.json  package.json
backend/: pyproject.toml
backend/src/: .env
frontend/: .env  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/auth/: AuthenticationPage.jsx  ClerkProviderWithRoutes.jsx
frontend/src/challenge/: ChallengeGenerator.jsx  MCQChallenege.jsx
frontend/src/history/: HistoryPanel.jsx
frontend/src/layout/: Layout.jsx
